# zettaranc-skill

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: e2e-cron.yml  test.yml
corpus/: README.md  batch_download_bilibili.py  batch_transcribe.py  download_subtitles.sh  merge_research.py  quality_check.py  srt_to_transcript.py
docs/: CHANGELOG.md  CONFIG_GUIDE.md
docs/superpowers/plans/: 2026-06-11-darwin-self-optimizer.md  2026-06-15-multi-data-source-provider.md
modules/: __init__.py  backtest_six_step.py  cli.py  cli_commands.py  data_sync.py  database.py  harness_updater.py  improvement_logger.py  intent_chat.py  llm_providers.py  log_analyzer.py  portfolio_diagnosis.py  report.py  screener.py  setup_wizard.py  strategies.py  tracking_manager.py  tracking_syncer.py  trade_parser.py  tushare_client.py
modules/indicators/: core.py  data_layer.py  kirin_detector.py  wave_theory.py
modules/providers/: __init__.py  baostock_provider.py  base.py  code_utils.py  composite.py  mootdx_provider.py  tushare_provider.py
modules/self_optimizer/: __init__.py  phase2_hillclimb.py  scorer.py
modules/strategies/: __init__.py  base_strategies.py  compound_strategies.py  core.py  sell_signals.py
scripts/: batch_compute_indicators.py  eval_strategies.py  fetch_tushare_data.py  generate_report.py  sync_and_compute.py  sync_watchlist.py
tests/: test_cli_screen.py  test_cli_subparser.py  test_data_sync_extensions.py  test_exam_rules.py  test_indicators_realdata.py  test_quality_check.py  test_rate_limiter.py  test_scorer.py  test_screener.py  test_setup_wizard.py  test_strategies.py  test_tushare_client.py
tests/test_providers/: test_baostock_provider.py  test_base.py  test_code_utils.py  test_composite.py  test_mootdx_provider.py  test_tushare_provider.py
(+10 files in other folders)
