[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zettaranc-skill"
version = "3.1.0"
description = "zettaranc（万千）的思维框架与量化工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zettaranc-skill contributors"}
]
keywords = ["trading", "quantitative", "tushare", "technical-indicators", "bili"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "tushare>=1.4.0",
    "mootdx>=1.0.0",
    "baostock>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
corpus = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
zt = "modules.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
exclude = ["tests*", "scripts*", "corpus*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["data/", "logs/", "knowledge/"]

[tool.ruff.lint]
select = ["F", "E", "W", "UP"]
ignore = ["E501", "F401", "F403"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
